tests/netconvert/import/XML/errors/broken_edge/edge#shape__false4b/errors.netconvert
Error: Attribute 'shape' in definition of a edge Invalid Number Format .
Quitting (on error).
